[workspace]
members = [
    "packages/*",
]

resolver = "2"

[workspace.package]
version         = "0.24.4"
edition         = "2021"
readme          = "README.md"
repository      = "https://github.com/MegaRockLabs/smart-account-auth"
description     = "Utilities, types and verification logic for smart contract / program based accounts for various blockchain-based virtual machines"
authors         = [ "Kromsten <kromsten@megarock.app>" ]
license         = "MIT"

[workspace.dependencies]
bech32                  = { version = "0.11.0", default-features = false, features = ["alloc"] }
base64                  = { version = "0.22.1", default-features = false, features = ["alloc"] }
sha2                    = { version = "0.10.8", default-features = false } 
semver                  = { version = "1.0.23", default-features = false }
thiserror               = { version = "2.0.4", default-features = false }

smart-account-auth      = { version = "0.24.4", path = "packages/bundle" }
saa-auth                = { version = "0.24.4", path = "packages/auth" }
saa-common              = { version = "0.24.4", path = "packages/common" }
saa-schema              = { version = "0.24.4", path = "packages/schema" }
saa-curves              = { version = "0.24.4", path = "packages/curves" }
saa-macros-proto        = { version = "0.24.4", path = "packages/macros-proto" }

cosmwasm-std            = { version = "1.5.8", default-features = false }
cw-storage-plus         = { version = "1.2.0", default-features = false }

secretwasm-std          = { version = "1.1.11", default-features = false, package = "secret-cosmwasm-std" }
secretwasm-storage      = { version = "1.1.11", default-features = false, package = "secret-cosmwasm-storage" }
secret-toolkit          = { version = "0.10.1", default-features = false, features = ["storage"] }


# Substrate
scale               = { version = "3.6.12", default-features = false, features = ["derive"], package = "parity-scale-codec"}
scale-info          = { version = "2.11.3", default-features = false, features = ["derive"] }
# CosmWasm
serde               = { version = "~1.0.215", default-features = false, features = ["derive"] }
schemars            = { version = "0.8.21",  default-features = false, features = ["derive"] }
# Solana
borsh               = { version = "1.5.3", default-features = false, features = ["derive"] }


[profile.release.package.smart-account-auth]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false