[workspace]
members = [
    "packages/bundle",
    "packages/auth",
    "packages/curves",
    "packages/common",
    "packages/schema",
    "packages/macros-proto/wasm",
    "packages/macros-proto/core",
    "packages/macros-proto/solana",
    "packages/macros-proto/substrate",
    #"packages/tests",
]

resolver = "2"

[workspace.package]
version         = "0.25.0"
edition         = "2021"
readme          = "README.md"
repository      = "https://github.com/MegaRockLabs/smart-account-auth"
description     = "Utilities, types and verification logic for smart contract / program based accounts for various blockchain-based virtual machines"
authors         = [ "Kromsten <kromsten@megarock.app>" ]
license         = "MIT"


[workspace.dependencies]
bech32                  = { version = "0.11.0", default-features = false, features = ["alloc"] }
base64                  = { version = "0.22.1", default-features = false, features = ["alloc"] }
sha2                    = { version = "0.10.9", default-features = false } 
semver                  = { version = "1.0.26", default-features = false }
thiserror               = { version = "2.0.12", default-features = false }

smart-account-auth      = { version = "0.25.0", path = "packages/bundle" }
saa-auth                = { version = "0.25.0", path = "packages/auth" }
saa-common              = { version = "0.25.1", path = "packages/common" }
saa-schema              = { version = "0.25.1", path = "packages/schema" }
saa-curves              = { version = "0.25.0", path = "packages/curves" }


saa-proto-core          = { version = "0.25.3", path = "packages/macros-proto/core" }
saa-proto-wasm          = { version = "0.25.2", path = "packages/macros-proto/wasm" }
saa-proto-solana        = { version = "0.25.0", path = "packages/macros-proto/solana" }
saa-proto-substrate     = { version = "0.25.0", path = "packages/macros-proto/substrate" }

cosmwasm-schema         = { version = "1.5.11", default-features = false }
cosmwasm-crypto         = { version = "2.2.2", default-features = false }
cosmwasm-std            = { version = "2.2.2", default-features = false, features = ["iterator"]}
cosmwasm-std-one        = { version = "1.5.11", default-features = false, package = "cosmwasm-std", features = ["iterator"] }
secretwasm-std          = { version = "1.1.11", default-features = false, package = "secret-cosmwasm-std", features = ["iterator"] }


# Substrate
scale               = { version = "3.6.12", default-features = false, features = ["derive"], package = "parity-scale-codec"}
scale-info          = { version = "2.11.3", default-features = false, features = ["derive"] }
# CosmWasm
serde               = { version = "1.0.219", default-features = false, features = ["derive"] }
schemars            = { version = "0.8.22",  default-features = false, features = ["derive"] }
# Solana
borsh               = { version = "1.5.7", default-features = false, features = ["derive"] }


strum               = { version = "0.27.1" }
strum_macros        = { version = "0.27.1" }
serde-json-wasm     = { version = "1.0.1",   default-features = false }
serde_json          = { version = "1.0.140", default-features = false }

enum_dispatch       = { version = "0.3.13" } 


[profile.release.package.smart-account-auth]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false